# maxpayout

./: .env.example  .gitmodules  Makefile  README.md
api/: Cargo.toml
api/migrations/: 20260625000000_create_auth_tables.sql  20260625000001_add_password_hash.sql
api/src/: auth.rs  handlers.rs  lib.rs  main.rs  middleware.rs
api/tests/: api_tests.rs  auth_tests.rs
coordinator/: Cargo.toml
coordinator/examples/: integration_demo.rs
coordinator/migrations/: 20260624000000_create_coordination_tables.sql
coordinator/src/: lib.rs  worker.rs
coordinator/tests/: integration_tests.rs
docs/design/: high_level_coordination_plan.md
web/: Cargo.toml  Makefile  README.md  build.rs  input.css  spin.toml
web/src/: app.rs  lib.rs  rfn_store.rs  server.rs
