[package]
name = "api"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.7", features = ["macros"] }
tokio = { version = "1.0", features = ["full"] }
sqlx = { version = "0.8", features = ["postgres", "runtime-tokio", "uuid", "chrono"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.0", features = ["v7", "serde"] }
thiserror = "2.0"
tower-http = { version = "0.5", features = ["trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
webauthn-rs = { version = "0.5", features = ["danger-allow-state-serialisation"] }
axum-extra = { version = "0.9", features = ["cookie"] }
governor = "0.6"
chrono = { version = "0.4", features = ["serde"] }
rand = "0.8"
time = "0.3"

# Sibling crates
coordinator = { path = "../coordinator" }
flushline = { path = "../flushline", features = ["db"] }
matrix = { path = "../matrix", features = ["db"] }
sponsor_allocator = { path = "../sponsor_allocator", features = ["db"] }
potbonus = { path = "../potbonus", features = ["db"] }

[dev-dependencies]
serde_json = "1.0"
tower = { version = "0.5", features = ["util"] }
