[package]
name = "coordinator"
version = "0.1.0"
edition = "2021"
description = "Database-backed asynchronous saga orchestrator and account aggregator for MaxPayout."
license = "MIT"

[dependencies]
sqlx = { version = "0.8", features = ["postgres", "runtime-tokio", "uuid"] }
tokio = { version = "1.0", features = ["full"] }
thiserror = "2.0"
uuid = { version = "1.0", features = ["v7", "serde"] }
async-trait = "0.1"
serde = { version = "1.0", features = ["derive"] }

# Sibling crates within maxpayout workspace
flushline = { path = "../flushline", features = ["db"] }
matrix = { path = "../matrix", features = ["db"] }
sponsor_allocator = { path = "../sponsor_allocator", features = ["db"] }
potbonus = { path = "../potbonus", features = ["db"] }

[dev-dependencies]
serde_json = "1.0"

[target.'cfg(all(target_arch = "wasm32", target_os = "unknown"))'.dependencies]
getrandom = { version = "0.2", features = ["js"] }
